--- a/railguns/templates/railguns/base_su.html
+++ b/railguns/templates/railguns/base_su.html
@@ -1,6 +1,6 @@
 {% extends 'railguns/base.html' %}
 
-{% load staticfiles %}
+{% load static %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'libs/semantic-ui/2.2.4/semantic.min.css' %}">
