--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -1,5 +1,3 @@
-{% load staticfiles %}
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +15,7 @@
 
 {% block js %}{% endblock %}
 
+{% load static %}
 <script src="{% static 'libs/js-cookie/2.1.2/js.cookie.min.js' %}"></script>
 <script src="{% static 'railguns/js/django.js' %}"></script>
 </body>
