--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -7,7 +7,7 @@
 <meta name="renderer" content="webkit">
 <link rel="icon" href="{% static 'favicon.ico' %}">
 
-{% block analytics %}{% endblock %}
+{% include 'includes/analytics.html' %}
 
 {% block css %}{% endblock %}
 
