--- a/railguns/templates/railguns/base_f7.html
+++ b/railguns/templates/railguns/base_f7.html
@@ -15,4 +15,5 @@
 <script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
 <script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
 <script src="{% static 'railguns/js/libs.js' %}"></script>
+<script src="{% static 'railguns/js/f7.js' %}"></script>
 {% endblock %}
