--- a/railguns/templates/railguns/base_su.html
+++ b/railguns/templates/railguns/base_su.html
@@ -14,4 +14,5 @@
 <script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
 <script src="{% static 'libs/semantic-ui/2.2.4/semantic.min.js' %}"></script>
 <script src="{% static 'railguns/js/libs.js' %}"></script>
+<script src="{% static 'railguns/js/su.js' %}"></script>
 {% endblock %}
