--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -13,5 +13,7 @@
 <script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
 <script src="{% static 'railguns/js/libs.js' %}"></script>
 <script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
+<script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js.map' %}"></script>
+
 <script src="{% static 'railguns/js/f7.js' %}"></script>
 {% endblock %}
