--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -1,39 +1,28 @@
 {% extends 'railguns/f7/base.html' %}
+{% load i18n %}
 
 {% block web %}
-<title>列表</title>
+<title>{% trans title %}</title>
+<script id="entry-template" type="text/x-handlebars-template">
+{% block list_view %}
+{% include items.mobile %}
+{% endblock %}
+</script>
+
 </head>
-<body class="theme-pink" data-endpoint="{{ endpoint }}">
+<body>
 	<div class="views">
 		<div class="view view-main">
 			<div class="pages toolbar-through">
-				<div class="page" data-page="index">
+				<div class="page" data-page="{{ name }}">
 					<div class="page-content">
-
 						<div class="content-block-title">Songs</div>
 						<div class="list-block media-list">
-							<ul>
-								{% for project in project_list %}
-								<li><a href="/projects/{{ project.id }}/" class="item-link item-content">
-										<div class="item-media">
-											<img src="{{ project.image_urls }}" width="80">
-										</div>
-										<div class="item-inner">
-											<div class="item-title-row">
-												<div class="item-title">{{ project.name }}</div>
-												<div class="item-after">$15</div>
-											</div>
-											<div class="item-subtitle">{{ project.type }}</div>
-											<div class="item-text">Lorem ipsum dolor sit amet...</div>
-										</div>
-								</a></li>
-								{% endfor %}
-							</ul>
+							<ul data-endpoint="{{ endpoint }}" id="datacontent"></ul>
 						</div>
 					</div>
 				</div>
 			</div>
-			{% include 'includes/h5_tabbar.html' %}
 		</div>
 	</div>
 {% endblock %}
