--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -58,7 +58,7 @@
 		<div class="view view-main">
 			<div class="pages toolbar-through">
 				<div class="page" data-page="{{ name }}">
-					<div class="page-content" data-endpoint="{{ endpoint }}" id="datacontent"></div>
+					<div class="page-content" data-endpoint="{{ endpoint }}"></div>
 				</div>
 			</div>
 		</div>
