--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -1,5 +1,4 @@
-{% load static %}
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -9,13 +8,13 @@
 <link rel="icon" href="{% static 'favicon.ico' %}">
 
 {% include 'includes/analytics.html' %}
-
+<!-- css -->
 {% block css %}{% endblock %}
 
 {% block web %}{% endblock %}
+<!-- js -->
 
 {% block js %}{% endblock %}
-
 <script src="{% static 'libs/js-cookie/2.1.2/js.cookie.min.js' %}"></script>
 <script src="{% static 'railguns/js/django.js' %}"></script>
 </body>
