--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -3,6 +3,7 @@
 {% load i18n %}
 
 {% block web %}
+
 {% block title %}
 <title>{% trans title %}</title>
 {% endblock %}
@@ -17,4 +18,11 @@
 {% block body %}
 {% endblock %}
 
+{% endblock %}
+
+{% block js %}
+<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
+<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
+<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
+<script src="{% static 'railguns/js/libs.js' %}"></script>
 {% endblock %}
