--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -8,10 +8,7 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
-<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
-<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
-<script src="{% static 'railguns/js/libs.js' %}"></script>
+{{ block.super }}
 <script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
 <script src="{% static 'railguns/js/f7.js' %}"></script>
 {% endblock %}
