--- a/railguns/templates/railguns/su/base.html
+++ b/railguns/templates/railguns/su/base.html
@@ -7,10 +7,7 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
-<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
-<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
-<script src="{% static 'railguns/js/libs.js' %}"></script>
+{{ block.super }}
 <script src="{% static 'libs/semantic-ui/2.2.4/semantic.min.js' %}"></script>
 <script src="{% static 'railguns/js/su.js' %}"></script>
 {% endblock %}
