--- a/railguns/templates/railguns/f7/detail.html
+++ b/railguns/templates/railguns/f7/detail.html
@@ -2,8 +2,10 @@
 
 {% block template %}
 {% verbatim %}
-
-<li>id: {{id}}</li>
-
+<!-- 示例模版开始 -->
+<div class="content-block">
+	<div class="content-block-inner">id: {{id}}</div>
+</div>
+<!-- 示例模版结束 -->
 {% endverbatim %}
 {% endblock %}
