--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -2,7 +2,7 @@
 
 {% block template %}
 {% verbatim %}
-
+<!-- 示例模版开始 -->
 <div class="content-block-title">results</div>
 <div class="list-block">
 	<ul>
@@ -43,6 +43,6 @@
 		</li>
 	</ul>
 </div>
-
+<!-- 示例模版结束 -->
 {% endverbatim %}
 {% endblock %}
