--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -1,6 +1,5 @@
-{% load static %}
-<!-- base.html -->
-<!DOCTYPE html>
+{% load static %}{% block structure %}<!-- base.html -->
+{% endblock %}<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
