--- a/railguns/templates/railguns/f7/detail.html
+++ b/railguns/templates/railguns/f7/detail.html
@@ -1,5 +1,7 @@
 {% extends './base.html' %}
-<!--       f7/detail.html -->
+{% block structure %}{{ block.super }}
+<!--       f7/detail.html -->{% endblock %}
+
 {% block template %}
 {% verbatim %}
 <!-- 示例模版开始 -->
