--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -1,5 +1,7 @@
 {% extends './base.html' %}
-<!--       f7/list.html -->
+{% block structure %}{{ block.super }}<!--       f7/list.html -->
+{% endblock %}
+
 {% block template %}
 {% verbatim %}
 <!-- 示例模版开始 -->
@@ -9,7 +11,9 @@
 		{{#results}}
 		<li>
 			<a href="#" class="item-link item-content">
-				<div class="item-media"><i class="icon icon-f7"></i></div>
+				<div class="item-media">
+					<i class="icon icon-f7"></i>
+				</div>
 				<div class="item-inner">
 					<div class="item-title">{{id}}</div>
 				</div>
@@ -26,7 +30,9 @@
 		<li class="item-content">
 			<div class="item-inner">
 				<div class="item-title">count</div>
-				<div class="item-after"><span class="badge bg-yellow">{{count}}</span></div>
+				<div class="item-after">
+					<span class="badge bg-yellow">{{count}}</span>
+				</div>
 			</div>
 		</li>
 		<li class="item-content">
