--- a/railguns/templates/railguns/f7/detail.html
+++ b/railguns/templates/railguns/f7/detail.html
@@ -1,6 +1,6 @@
 {% extends './base.html' %}
-{% block structure %}{{ block.super }}
-<!--       f7/detail.html -->{% endblock %}
+{% block structure %}{{ block.super }}<!--       f7/detail.html -->
+{% endblock %}
 
 {% block template %}
 {% verbatim %}
