--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -2,7 +2,7 @@
 <!-- 加载 -->
 {% load i18n static %}
 <!-- 结构 -->
-{% block structure %}{{ block.super }}<!--   base_quick.html -->
+{% block structure %}{{ block.super }}<!--   base_quick -->
 {% endblock %}
 {% block web %}
 
@@ -17,11 +17,15 @@
 {% block body %}
 {% endblock %}
 
-{% endblock %}
+	<!-- js 开始 -->{% block js %}
+	<!-- base_quick -->
+	<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
+	<script src="{% static 'libs/js-cookie/2.1.2/js.cookie.min.js' %}"></script>
+	<script src="{% static 'railguns/js/django.js' %}"></script>
 
-{% block js %}
-<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
-<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
-<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
-<script src="{% static 'railguns/js/libs.js' %}"></script>
+	<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
+	<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
+	<script src="{% static 'railguns/js/libs.js' %}"></script>
+	{% endblock %}
+	<!-- js 结束 -->
 {% endblock %}
