--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -1,5 +1,5 @@
 {% extends './base.html' %}
-{% block structure %}{{ block.super }}<!--       f7/list.html -->
+{% block structure %}{{ block.super }}<!--       f7/list -->
 {% endblock %}
 
 {% block template %}
