--- a/railguns/templates/railguns/f7/detail.html
+++ b/railguns/templates/railguns/f7/detail.html
@@ -1,5 +1,5 @@
 {% extends './base.html' %}
-{% block structure %}{{ block.super }}<!--       f7/detail.html -->
+{% block structure %}{{ block.super }}<!--       f7/detail -->
 {% endblock %}
 
 {% block template %}
