--- a/railguns/templates/railguns/su/base.html
+++ b/railguns/templates/railguns/su/base.html
@@ -2,15 +2,17 @@
 
 {% load static %}
 
-{% block structure %}{{ block.super }}<!--     su/base.html -->
+{% block structure %}{{ block.super }}<!--     su/base -->
 {% endblock %}
 
 {% block css %}
+<!-- su/base -->
 <link rel="stylesheet" href="{% static 'libs/semantic-ui/2.2.4/semantic.min.css' %}">
+<!-- 自定义 -->
 {% endblock %}
 
-{% block js %}
-{{ block.super }}
-<script src="{% static 'libs/semantic-ui/2.2.4/semantic.min.js' %}"></script>
-<script src="{% static 'railguns/js/su.js' %}"></script>
+{% block js %}{{ block.super }}<!-- su/base -->
+	<script src="{% static 'libs/semantic-ui/2.2.4/semantic.min.js' %}"></script>
+	<script src="{% static 'railguns/js/su.js' %}"></script>
+	<!-- 自定义 -->
 {% endblock %}
