--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -9,10 +9,10 @@
 <link rel="icon" href="{% static 'favicon.ico' %}">
 <!-- analytics -->
 {% include 'includes/analytics.html' %}
-<!-- css 开始 -->{% block css %}{% endblock %}<!-- css 结束 -->
+<!-- 🍺 css 开始 -->{% block css %}{% endblock %}<!-- 🍻 css 结束 -->
 
-<!-- web 开始 -->
+<!-- 🍺 web 开始 -->
 {% block web %}{% endblock %}
-<!-- web 结束 -->
+<!-- 🍻 web 结束 -->
 </body>
 </html>
