--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -17,7 +17,7 @@
 {% block body %}
 {% endblock %}
 
-	<!-- js 开始 -->{% block js %}
+	<!-- 🍺 js 开始 -->{% block js %}
 	<!-- base_quick -->
 	<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
 	<script src="{% static 'libs/js-cookie/2.1.2/js.cookie.min.js' %}"></script>
@@ -27,5 +27,5 @@
 	<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
 	<script src="{% static 'railguns/js/libs.js' %}"></script>
 	{% endblock %}
-	<!-- js 结束 -->
+	<!-- 🍻 js 结束 -->
 {% endblock %}
