--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -11,21 +11,21 @@
 <!-- f7/base -->
 <link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.min.css' %}">
 <link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.colors.min.css' %}">
-<!-- 自定义 -->
+<!-- 💛 自定义 -->
 {% endblock %}
 
 {% block body %}
 	<div class="views">
 		<div class="view view-main">
-			<!-- 只支持 iOS Theme 的穿透 Navbar-->{% block navbar %}{% endblock %}
+			<!-- 只支持 iOS Theme 的穿透 Navbar-->{% block navbar %}<!-- 无导航栏 -->{% endblock %}
 			<div class="pages">
 				<div class="page" data-page="{{ name }}">
 					<div class="page-content" data-endpoint="{{ endpoint }}">
 					</div>
-					<!-- 固定的 Toolbar -->{% block toolbar %}{% endblock %}
+					<!-- 固定的 Toolbar -->{% block toolbar %}<!-- 无工具栏 -->{% endblock %}
 				</div>
 			</div>
-			<!-- 只支持 iOS Theme 的穿透 Tabbar -->{% block tabbar %}{% endblock %}
+			<!-- 只支持 iOS Theme 的穿透 Tabbar -->{% block tabbar %}<!-- 无Tabbar -->{% endblock %}
 		</div>
 	</div>
 {% endblock %}
@@ -33,5 +33,5 @@
 {% block js %}{{ block.super }}<!-- f7/base -->
 	<script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
 	<script src="{% static 'railguns/js/f7.js' %}"></script>
-	<!-- 自定义 -->
+	<!-- 💛 自定义 -->
 {% endblock %}
