--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -1,5 +1,6 @@
 {% load static %}{% block structure %}<!-- base -->
-{% endblock %}<!DOCTYPE html>
+{% endblock %}
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
