--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -14,10 +14,10 @@
 <!-- 💛 自定义 -->
 {% endblock %}
 
-{% block body %}
-	<div class="views">
+{% block body %}	<div class="views">
 		<div class="view view-main">
 			<!-- 只支持 iOS Theme 的穿透 Navbar-->{% block navbar %}<!-- 无导航栏 -->{% endblock %}
+			<!-- f7 pages 区域 -->
 			<div class="pages">
 				<div class="page" data-page="{{ name }}">
 					<div class="page-content" data-endpoint="{{ endpoint }}">
