--- a/railguns/templates/railguns/su/base.html
+++ b/railguns/templates/railguns/su/base.html
@@ -6,13 +6,13 @@
 {% endblock %}
 
 {% block css %}
-<!-- su/base -->
-<link rel="stylesheet" href="{% static 'libs/semantic-ui/2.2.4/semantic.min.css' %}">
-<!-- 💛 自定义 -->
+	<!-- su/base -->
+	<link rel="stylesheet" href="{% static 'libs/semantic-ui/2.2.4/semantic.min.css' %}">
+	<!-- 💛 自定义css -->
 {% endblock %}
 
 {% block js %}{{ block.super }}<!-- su/base -->
 	<script src="{% static 'libs/semantic-ui/2.2.4/semantic.min.js' %}"></script>
 	<script src="{% static 'railguns/js/su.js' %}"></script>
-	<!-- 💛 自定义 -->
+	<!-- 💛 自定义js -->
 {% endblock %}
