--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -5,16 +5,17 @@
 {% block structure %}{{ block.super }}<!--     f7/base -->
 {% endblock %}
 
-{% block viewport %}<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">{% endblock %}
+	{% block viewport %}<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">{% endblock %}
 
 {% block css %}
-<!-- f7/base -->
-<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.min.css' %}">
-<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.colors.min.css' %}">
-<!-- 💛 自定义 -->
+	<!-- f7/base -->
+	<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.min.css' %}">
+	<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.colors.min.css' %}">
+	<!-- 💛 自定义css -->
 {% endblock %}
 
-{% block body %}	<div class="views">
+{% block body %}
+	<div class="views">
 		<div class="view view-main">
 			<!-- 只支持 iOS Theme 的穿透 Navbar-->{% block navbar %}<!-- 无导航栏 -->{% endblock %}
 			<!-- f7 pages 区域 -->
@@ -33,5 +34,5 @@
 {% block js %}{{ block.super }}<!-- f7/base -->
 	<script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
 	<script src="{% static 'railguns/js/f7.js' %}"></script>
-	<!-- 💛 自定义 -->
+	<!-- 💛 自定义js -->
 {% endblock %}
