--- a/railguns/templates/railguns/f7/detail.html
+++ b/railguns/templates/railguns/f7/detail.html
@@ -2,12 +2,10 @@
 {% block structure %}{{ block.super }}<!--       f7/detail -->
 {% endblock %}
 
-{% block template %}
-{% verbatim %}
-<!-- 示例模版开始 -->
+{% block template %}{% verbatim %}
+<!-- 示例模版 开始 -->
 <div class="content-block">
 	<div class="content-block-inner">id: {{id}}</div>
 </div>
-<!-- 示例模版结束 -->
-{% endverbatim %}
-{% endblock %}
+<!-- 示例模版 结束 -->
+{% endverbatim %}{% endblock %}
