--- a/railguns/templates/railguns/f7/list.html
+++ b/railguns/templates/railguns/f7/list.html
@@ -2,9 +2,8 @@
 {% block structure %}{{ block.super }}<!--       f7/list -->
 {% endblock %}
 
-{% block template %}
-{% verbatim %}
-<!-- 示例模版开始 -->
+{% block template %}{% verbatim %}
+<!-- 示例模版 开始 -->
 <div class="content-block-title">results</div>
 <div class="list-block">
 	<ul>
@@ -49,6 +48,5 @@
 		</li>
 	</ul>
 </div>
-<!-- 示例模版结束 -->
-{% endverbatim %}
-{% endblock %}
+<!-- 示例模版 结束 -->
+{% endverbatim %}{% endblock %}
