--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -1,4 +1,4 @@
-{% load static i18n %}{% block structure %}<!-- base -->
+{% load static %}{% block structure %}<!-- base -->
 {% endblock %}
 <!DOCTYPE html>
 <html>
@@ -10,7 +10,7 @@
 	<link rel="icon" href="{% static 'favicon.ico' %}">
 	<!-- analytics -->
 {% include 'includes/analytics.html' %}
-	{% block title %}<title>{% trans title %}</title>{% endblock %}
+	{% block title %}<title>title</title>{% endblock %}
 <!-- 🍺 web 开始 -->
 {% block web %}{% endblock %}
 <!-- 🍻 web 结束 -->
