--- a/railguns/templates/railguns/f7/base.html
+++ b/railguns/templates/railguns/f7/base.html
@@ -9,8 +9,8 @@
 
 {% block css %}
 	<!-- f7/base -->
-	<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.min.css' %}">
-	<link rel="stylesheet" href="{% static 'libs/framework7/1.4.2/css/framework7.ios.colors.min.css' %}">
+	<link rel="stylesheet" href="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/framework7/1.4.2/css/framework7.ios.min.css">
+	<link rel="stylesheet" href="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/framework7/1.4.2/css/framework7.ios.colors.min.css">
 	<!-- 💛 自定义css -->
 {% endblock %}
 
@@ -32,7 +32,7 @@
 {% endblock %}
 
 {% block js %}{{ block.super }}<!-- f7/base -->
-	<script src="{% static 'libs/framework7/1.4.2/js/framework7.min.js' %}"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/framework7/1.4.2/js/framework7.min.js"></script>
 	<script src="{% static 'railguns/js/f7.js' %}"></script>
 	<!-- 💛 自定义js -->
 {% endblock %}
