--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -18,12 +18,12 @@
 	<!-- 🍺 js 开始 -->{% block js %}
 	<!-- base_quick -->
 	<!--   Django -->
-	<script src="{% static 'libs/jquery/3.1.0/jquery.min.js' %}"></script>
-	<script src="{% static 'libs/js-cookie/2.1.2/js.cookie.min.js' %}"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/js-cookie/2.1.3/js.cookie.min.js"></script>
 	<script src="{% static 'railguns/js/django.js' %}"></script>
 	<!--   libs -->
-	<script src="{% static 'libs/jquery.lazy/1.7.3/jquery.lazy.min.js' %}"></script>
-	<script src="{% static 'libs/handlebars/4.0.5/handlebars.min.js' %}"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/jquery.lazy/1.7.3/jquery.lazy.min.js"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/handlebars/4.0.5/handlebars.min.js"></script>
 	<script src="{% static 'railguns/js/libs.js' %}"></script>
 	{% endblock %}	<!-- 🍻 js 结束 -->
 {% endblock %}
