--- a/railguns/templates/railguns/base.html
+++ b/railguns/templates/railguns/base.html
@@ -10,7 +10,7 @@
 	<link rel="icon" href="{% static 'favicon.ico' %}">
 	<!-- analytics -->
 {% include 'includes/analytics.html' %}
-	{% block title %}<title>title</title>{% endblock %}
+	{% block title %}<title>{{ title }}</title>{% endblock %}
 <!-- 🍺 web 开始 -->
 {% block web %}{% endblock %}
 <!-- 🍻 web 结束 -->
