--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -23,7 +23,7 @@
 	<script src="{% static 'railguns/js/django.js' %}"></script>
 	<!--   libs -->
 	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/jquery.lazy/1.7.3/jquery.lazy.min.js"></script>
-	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/handlebars/4.0.5/handlebars.min.js"></script>
+	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	<script src="{% static 'railguns/js/libs.js' %}"></script>
 	{% endblock %}	<!-- 🍻 js 结束 -->
 {% endblock %}
