--- a/railguns/templates/railguns/mdl/detail.html
+++ b/railguns/templates/railguns/mdl/detail.html
@@ -9,3 +9,8 @@
 </div>
 <!-- 示例模版 结束 -->
 {% endverbatim %}{% endblock %}
+
+{% block content %}
+<div class="page-content" data-endpoint="{{ endpoint }}">
+</div>
+{% endblock %}
