--- a/railguns/templates/railguns/mdl/base.html
+++ b/railguns/templates/railguns/mdl/base.html
@@ -14,12 +14,11 @@
 {% endblock %}
 
 {% block body %}
-	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" id="container">
+	<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 		{% block navbar %}<!-- 无导航栏 -->{% endblock %}
 		<!-- mdl main 区域 -->
 		<main class="mdl-layout__content">
-			<div class="page-content" data-endpoint="{{ endpoint }}">
-			</div>
+		{% block content %}{% endblock %}
 		</main>
 	</div>
 {% endblock %}
@@ -28,6 +27,4 @@
 	<script src="//static-cmcaifu-com.oss-cn-hangzhou.aliyuncs.com/libs/mdl/1.3.0/material.min.js"></script>
 	<script src="{% static 'railguns/js/mdl.js' %}"></script>
 	<!-- 💛 自定义js -->
-	<script>
-</script>
 {% endblock %}
