--- a/railguns/templates/railguns/mdl/collection_list.html
+++ b/railguns/templates/railguns/mdl/collection_list.html
@@ -23,7 +23,4 @@
 <!-- 示例模版 结束 -->
 {% endverbatim %}{% endblock %}
 
-{% block list %}
-<div class="mdl-grid" data-endpoint="{{ endpoint }}" id="list">
-</div>
-{% endblock %}
+{% block list %}	<div class="mdl-grid" data-endpoint="{{ endpoint }}" id="list"></div>{% endblock %}
