--- a/railguns/templates/railguns/mdl/table_list.html
+++ b/railguns/templates/railguns/mdl/table_list.html
@@ -28,7 +28,4 @@
 <!-- 示例模版 结束 -->
 {% endverbatim %}{% endblock %}
 
-{% block list %}
-<ul class="mdl-list" data-endpoint="{{ endpoint }}" id="list">
-</ul>
-{% endblock %}
+{% block list %}	<ul class="mdl-list" data-endpoint="{{ endpoint }}" id="list"></ul>{% endblock %}
