--- a/railguns/templates/railguns/mdl/list.html
+++ b/railguns/templates/railguns/mdl/list.html
@@ -2,6 +2,4 @@
 {% block structure %}{{ block.super }}<!--       mdl/list -->
 {% endblock %}
 
-{% block content %}
-{% block list %}{% endblock %}
-{% endblock %}
+{% block content %}{% block list %}{% endblock %}{% endblock %}
