--- a/railguns/templates/railguns/mdc/detail.html
+++ b/railguns/templates/railguns/mdc/detail.html
@@ -1,5 +1,5 @@
 {% extends './base.html' %}
-{% block structure %}{{ block.super }}<!--       mdl/detail -->
+{% block structure %}{{ block.super }}<!--       mdc/detail -->
 {% endblock %}
 
 {% block template %}{% verbatim %}
