--- a/railguns/templates/railguns/mdc/list.html
+++ b/railguns/templates/railguns/mdc/list.html
@@ -1,5 +1,5 @@
 {% extends './base.html' %}
-{% block structure %}{{ block.super }}<!--       mdl/list -->
+{% block structure %}{{ block.super }}<!--       mdc/list -->
 {% endblock %}
 
 {% block content %}{% block list %}{% endblock %}{% endblock %}
