--- a/railguns/templates/railguns/mdc/base.html
+++ b/railguns/templates/railguns/mdc/base.html
@@ -9,21 +9,21 @@
 {% block css %}
 	<!-- mdc/base -->
 	<link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<!-- 💛 自定义css -->
 {% endblock %}
 
 {% block body %}
-	<div class="mdc-toolbar mdc-toolbar--fixed">
+	<header class="mdc-toolbar mdc-toolbar--fixed">
 		<div class="mdc-toolbar__row">
 			<section class="mdc-toolbar__section mdc-toolbar__section--align-start">
-				<button class="demo-menu material-icons">menu</button>
+				{% block menu %}<button class="menu material-icons">menu</button>{% endblock %}
 				<span class="mdc-toolbar__title catalog-title">{% trans '基金云' %}</span>
 			</section>
 		</div>
-	</div>
-	{% block navbar %}<!-- 无导航栏 -->{% endblock %}
+	</header>
+	{% block navbar %}<!-- 无侧导航栏 -->{% endblock %}
 	<!-- mdc main 区域 -->
 	<main class="mdc-toolbar-fixed-adjust">
 	{% block content %}{% endblock %}
