--- a/railguns/templates/railguns/mdc/base.html
+++ b/railguns/templates/railguns/mdc/base.html
@@ -10,7 +10,8 @@
 	<!-- mdc/base -->
 	<link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+	<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<!-- 💛 自定义css -->
 {% endblock %}
 
