--- a/railguns/templates/railguns/base_quick.html
+++ b/railguns/templates/railguns/base_quick.html
@@ -18,12 +18,12 @@
 	<!-- 🍺 js 开始 -->{% block js %}
 	<!-- base_quick -->
 	<!--   Django -->
-	<script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-	<script src="//cdn.bootcss.com/js-cookie/2.1.4/js.cookie.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/js-cookie/2.1.4/js.cookie.js"></script>
 	<script src="{% static 'railguns/js/django.js' %}"></script>
 	<!--   libs -->
-	<script src="//cdn.bootcss.com/jquery.lazy/1.7.4/jquery.lazy.min.js"></script>
-	<script src="//cdn.bootcss.com/handlebars.js/4.0.6/handlebars.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery.lazy/1.7.5/jquery.lazy.min.js"></script>
+	<script src="https://cdn.bootcss.com/handlebars.js/4.0.8/handlebars.min.js"></script>
 	<script src="{% static 'railguns/js/libs.js' %}"></script>
 	{% endblock %}	<!-- 🍻 js 结束 -->
 {% endblock %}
