--- a/railguns/templates/railguns/mdc/collection_list.html
+++ b/railguns/templates/railguns/mdc/collection_list.html
@@ -23,7 +23,6 @@
 <!-- 示例模版 结束 -->
 {% endverbatim %}{% endblock %}
 
-{% block list %}	<div class="mdc-grid-list">
-		<ul class="mdc-grid-list__tiles" data-endpoint="{{ endpoint }}" id="list">
-		</ul>
+{% block list %}<div class="mdc-grid-list">
+		<ul class="mdc-grid-list__tiles" data-endpoint="{{ endpoint }}" id="list"></ul>
 	</div>{% endblock %}
