--- a/railguns/templates/railguns/mdc/base.html
+++ b/railguns/templates/railguns/mdc/base.html
@@ -25,8 +25,7 @@
 			</section>
 		</div>
 	</header>
-	<!-- drawer 区域 -->
-	{% block navbar %}<!-- 无侧导航栏 -->{% endblock %}
+	<!-- drawer 区域 -->{% block navbar %}<!-- 无侧导航栏 -->{% endblock %}
 	<!-- main 区域 -->
 	<main class="mdc-toolbar-fixed-adjust">
 		{% block content %}{% endblock %}
