--- a/railguns/templates/railguns/mdc/detail.html
+++ b/railguns/templates/railguns/mdc/detail.html
@@ -11,6 +11,5 @@
 {% endverbatim %}{% endblock %}
 
 {% block content %}
-<div class="page-content" data-endpoint="{{ endpoint }}">
-</div>
+<div class="page-content" data-endpoint="{{ endpoint }}"></div>
 {% endblock %}
