--- a/railguns/templates/railguns/mdc/table_detail.html
+++ b/railguns/templates/railguns/mdc/table_detail.html
@@ -17,6 +17,4 @@
 <!-- 示例模版 结束 -->
 {% endverbatim %}{% endblock %}
 
-{% block content %}
-<div class="mdc-list-group" data-endpoint="{{ endpoint }}"></div>
-{% endblock %}
+{% block content %}<div class="mdc-list-group" data-endpoint="{{ endpoint }}" id="detail"></div>{% endblock %}
