--- a/railguns/developer/templates/downloads.html
+++ b/railguns/developer/templates/downloads.html
@@ -8,7 +8,7 @@
 <meta name="description" content="" />
 <meta name="author" content="">
 <meta name="robots" content="none">
-<title>城满财富</title>
+<title>{{ title }}</title>
 </head>
 <body>
 	<a href="models.zip">下载客户端模型类</a>
