--- a/railguns/developer/templates/downloads.html
+++ b/railguns/developer/templates/downloads.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="" />
-<meta name="description" content="" />
+<meta name="keywords" content="">
+<meta name="description" content="">
 <meta name="author" content="">
 <meta name="robots" content="none">
 <title>{{ title }}</title>
